# qFinanceTools

./: .gitignore  AGENTS.md  README.md  main.py  prd.md  pyproject.toml
src/qbanker/: __init__.py
src/qbanker/cli/: __init__.py  main.py
src/qbanker/cli/commands/: __init__.py  afford.py  bonds.py  corporate.py  invest.py  loan.py  risk.py
src/qbanker/cli/renderers/: afford.py  bonds.py  corporate.py  invest.py  loan.py  risk.py
src/qbanker/core/: __init__.py  afford.py  bonds.py  corporate.py  investments.py  loans.py  risk.py
src/qbanker/models/: __init__.py  afford.py  bonds.py  investments.py
src/qfinancetools/: __init__.py
src/qfinancetools/cli/: main.py  prompts.py
src/qfinancetools/cli/commands/: __init__.py  afford.py  bonds.py  compare.py  corporate.py  goal.py  invest.py  loan.py  plugins.py  risk.py  stocks.py  timeline.py
src/qfinancetools/cli/renderers/: bonds.py  (+11 more)
src/qfinancetools/core/: __init__.py  afford.py  bonds.py  comparison.py  corporate.py  explainability.py  goals.py  guardrails.py  investments.py  loans.py  plugins.py  risk.py  stocks.py  timeline.py
src/qfinancetools/gui/: __init__.py  app.py  theme.py  widgets.py
src/qfinancetools/models/: __init__.py  afford.py  bonds.py  comparison.py  corporate.py  explain.py  goals.py  investments.py  loans.py  plugins.py  risk.py  stocks.py  timeline.py
tests/: conftest.py  test_afford.py  test_bonds.py  test_cli.py  test_cli_new.py  test_comparison.py  test_corporate.py  test_goals.py  test_investments.py  test_loans.py  test_plugins.py  test_risk.py  test_stocks.py  test_timeline.py
(+11 files in other folders)
