[project]
name = "qfinance"
version = "0.1.0"
description = "Financial reasoning engine with CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer",
  "rich",
  "pydantic",
  "pytest",
  "hypothesis",
]

[project.scripts]
qfin = "qfinancetools.cli.main:app"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
